only create a Path via URL->URI if the protocol part is in the URL; refs #19515